[package]
name = "glium_text_rusttype"
version = "0.3.2"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "Fedor Logachev <not.fl3@gmail.com>", "Constantine Shablya <t3a@protonmail.com>"]
description = "glium_text fork, text drawing with glium and rusttype"
documentation = "https://docs.rs/glium_text_rusttype"
repository = "https://github.com/not-fl3/glium_text_rusttype"
keywords = ["text", "opengl"]
license = "MIT"

[dependencies]
rusttype = "0.7"

[dependencies.glium]
version = "0.23"
default-features = false

[dev-dependencies]
cgmath = "0.17"

[dev-dependencies.glium]
version = "0.23"
features = ["glutin"]
