[package]
name = "miniquad_text_rusttype"
version = "0.1.1"
edition = "2018"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "Fedor Logachev <not.fl3@gmail.com>", "Constantine Shablya <t3a@protonmail.com>"]
description = "glium_text fork, text drawing with miniquad and rusttype"
documentation = "https://docs.rs/glium_text_rusttype"
repository = "https://github.com/not-fl3/miniquad_text_rusttype"
keywords = ["text", "opengl"]
license = "MIT"

[features]
default = ["render"]
render = ["miniquad"]

[dependencies]
rusttype = "0.7.7"
miniquad = { version = "0.2.*", optional = true }

[dev-dependencies]
glam = {version = "0.8", features = ["scalar-math"] }
